[package]
name = "groestlcoin"
version = "0.28.0"
authors = ["Groestlcoin Developers <groestlcoin@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/Groestlcoin/rust-groestlcoin/"
repository = "https://github.com/Groestlcoin/rust-groestlcoin/"
documentation = "https://docs.rs/groestlcoin/"
description = "General groestlcoin library for using and interoperating with Groestlcoin."
keywords = [ "crypto", "groestlcoin" ]
readme = "README.md"
exclude = ["./test_data"]
edition = "2018"

# Please don't forget to add relevant features to docs.rs below
[features]
default = [ "std", "secp-recovery" ]
rand = ["secp256k1/rand-std"]
serde = ["actual-serde", "groestlcoin_hashes/serde", "secp256k1/serde"]
secp-lowmemory = ["secp256k1/lowmemory"]
secp-recovery = ["secp256k1/recovery"]

# At least one of std, no-std must be enabled.
#
# The no-std feature doesn't disable std - you need to turn off the std feature for that by disabling default.
# Instead no-std enables additional features required for this crate to be usable without std.
# As a result, both can be enabled without conflict.
std = ["secp256k1/std", "groestlcoin_hashes/std", "bech32/std"]
no-std = ["hashbrown", "core2/alloc", "groestlcoin_hashes/alloc", "secp256k1/alloc"]

[package.metadata.docs.rs]
features = [ "std", "secp-recovery", "base64", "rand", "serde", "groestlcoinconsensus" ]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bech32 = { version = "0.8.1", default-features = false }
groestlcoin_hashes = { version = "0.11.0", default-features = false }
secp256k1 = { git = "https://github.com/Groestlcoin/rust-secp256k1-grs", tag = "0.24.0", version = "0.24.0", default-features = false, features = ["groestlcoin_hashes"] }
core2 = { version = "0.3.0", optional = true, default-features = false }

base64 = { version = "0.13.0", optional = true }
groestlcoinconsensus = { git = "https://github.com/Groestlcoin/rust-groestlcoinconsensus", tag = "2.19.1-3", version = "2.19.1-3", optional = true }
# Do NOT use this as a feature! Use the `serde` feature instead.
actual-serde = { package = "serde", version = "1", default-features = false, features = [ "derive", "alloc" ], optional = true }
hashbrown = { version = "0.8", optional = true }

[dev-dependencies]
serde_json = "<1.0.45"
serde_test = "1"
secp256k1 = { git = "https://github.com/Groestlcoin/rust-secp256k1-grs", tag = "0.24.0", version = "0.24.0", features = [ "recovery", "rand-std" ] }
bincode = "1.3.1"

[[example]]
name = "bip32"

[[example]]
name = "handshake"
required-features = ["std"]

[[example]]
name = "ecdsa-psbt"
required-features = ["std", "groestlcoinconsensus"]
