[workspace]
members = ["groestlcoin", "hashes", "internals", "fuzz", "io", "units", "base58"]
resolver = "2"

[patch.crates-io.base58grsck]
path = "base58"

[patch.crates-io.groestlcoin]
path = "groestlcoin"

[patch.crates-io.groestlcoin_hashes]
path = "hashes"

[patch.crates-io.groestlcoin-internals]
path = "internals"

[patch.crates-io.bitcoin-io]
path = "io"

[patch.crates-io.groestlcoin-units]
path = "units"
