[package]
name = "groestlcoin_hashes"
version = "0.12.1"
authors = ["Groestlcoin Developers <groestlcoin@gmail.com>"]
license = "CC0-1.0"
repository = "https://github.com/Groestlcoin/rust-groestlcoin"
documentation = "https://docs.rs/groestlcoin_hashes/"
description = "Hash functions used by the rust-groestlcoin eccosystem"
categories = ["algorithms"]
keywords = [ "crypto", "groestlcoin", "hash", "digest" ]
readme = "README.md"
edition = "2018"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "internals/std"]
alloc = ["internals/alloc"]
serde-std = ["serde/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
groestl = { version = "0.10.0", default_features = false }

internals = { path = "../internals", package = "groestlcoin-internals", version = "0.1.0" }

core2 = { version = "0.3.0", default_features = false, optional = true }
schemars = { version = "0.8.3", optional = true }
# Only enable this if you explicitly do not want to use "std", otherwise enable "serde-std".
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"
