[package]
name = "groestlcoin_hashes"
version = "0.13.0"
authors = ["Groestlcoin Developers <groestlcoin@gmail.com>"]
license = "CC0-1.0"
repository = "https://github.com/Groestlcoin/rust-groestlcoin"
documentation = "https://docs.rs/groestlcoin_hashes/"
description = "Hash functions used by the rust-groestlcoin eccosystem"
categories = ["algorithms"]
keywords = [ "crypto", "groestlcoin", "hash", "digest" ]
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "hex/std", "bitcoin-io/std"]
alloc = ["hex/alloc"]
serde-std = ["serde/std"]
# If you want I/O you must enable either "std" or "io".
io = ["bitcoin-io"]
# Smaller (but slower) implementation of sha256, sha512 and ripemd160
small-hash = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
groestl = { version = "0.10.1", default_features = false }
hex = { package = "hex-conservative", version = "0.1.1", default-features = false }

bitcoin-io = { version = "0.1", default-features = false, optional = true }
schemars = { version = "0.8.3", default-features = false, optional = true }
# Only enable this if you explicitly do not want to use "std", otherwise enable "serde-std".
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"
