[package]
name = "groestlcoin-internals"
version = "0.1.0"
authors = ["Groestlcoin Developers <groestlcoin@gmail.com>"]
license = "CC0-1.0"
repository = "https://github.com/Groestlcoin/rust-groestlcoin/"
documentation = "https://docs.rs/groestlcoin-internals"
description = "Internal types and macros used by rust-groestlcoin ecosystem"
categories = ["cryptography::cryptocurrencies"]
keywords = ["internal"]
readme = "README.md"
edition = "2018"

# Please don't forget to add relevant features to docs.rs below.
[features]
default = []
std = ["alloc"]
alloc = []

[package.metadata.docs.rs]
features = ["std"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[dev-dependencies]
